<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CoffeeView"
    android:name=".CoffeeView"
    android:label = "@string/CoffeeView"
    android:parentActivityName=".MainActivity">


    <ImageView
        android:id="@+id/imageView"
        android:layout_width="237dp"
        android:layout_height="183dp"
        android:layout_marginStart="85dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="85dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/coffee"
        android:contentDescription="@string/coffeeImgDescription" />

    <CheckBox
        android:id="@+id/cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="65dp"
        android:onClick="creamClicked"
        android:text="@string/cream"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/caramel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="28dp"
        android:onClick="caramelClicked"
        android:text="@string/caramel"
        android:textSize="20sp"
        app:layout_constraintEnd_toStartOf="@+id/milk"
        app:layout_constraintStart_toEndOf="@+id/cream"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/milk"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="65dp"
        android:layout_marginEnd="32dp"
        android:onClick="milkClicked"
        android:text="@string/milk"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView" />

    <CheckBox
        android:id="@+id/whipped_cream"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="25dp"
        android:onClick="whipped_creamClicked"
        android:text="@string/whipped_cream"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/cream" />

    <!--    <ListView-->
<!--        android:layout_width="200dp"-->
<!--        android:layout_height="190dp"-->
<!--        android:layout_marginTop="40dp"-->
<!--        android:layout_marginEnd="160dp"-->
<!--        app:layout_constraintEnd_toEndOf="parent"-->
<!--        app:layout_constraintStart_toStartOf="parent"-->
<!--        app:layout_constraintTop_toBottomOf="@+id/cream4" />-->

    <CheckBox
        android:id="@+id/syrup"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="25dp"
        android:layout_marginEnd="30dp"
        android:onClick="syrupClicked"
        android:text="@string/syrup"
        android:textSize="20sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/whipped_cream"
        app:layout_constraintTop_toBottomOf="@+id/milk" />

    <Button
        android:id="@+id/add_to_order_coffee"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="15dp"
        android:onClick="addToOrder"
        android:text="@string/add_to_order"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <Spinner
        android:id="@+id/coffee_size"
        android:layout_width="132dp"
        android:layout_height="52dp"
        android:layout_marginStart="50dp"
        android:layout_marginEnd="263dp"
        app:layout_constraintBottom_toTopOf="@+id/TextInputLayout_coffee_subtotal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/whipped_cream"
        tools:ignore="SpeakableTextPresentCheck" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/TextInputLayout_coffee_subtotal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="101dp"
        android:layout_marginEnd="111dp"
        android:layout_marginBottom="43dp"
        app:layout_constraintBottom_toTopOf="@+id/add_to_order_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/coffee_subtotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AFBABC"
            android:editable="false"
            android:hint="@string/coffee_subtotal"
            android:textColorHint="#37474F"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

</androidx.constraintlayout.widget.ConstraintLayout>