<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:label = "@string/BasketView"
    tools:context=".BasketView">

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="35dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="15dp"
        android:text="@string/your_order"
        android:textAllCaps="true"
        android:textColor="@color/black"
        android:textSize="30sp"
        app:layout_constraintEnd_toStartOf="@+id/imageView_in_donut_view"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/imageView_in_donut_view"
        android:layout_width="151dp"
        android:layout_height="106dp"
        android:layout_marginStart="240dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:layout_marginBottom="40dp"
        app:layout_constraintBottom_toTopOf="@+id/listView_basket"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/your_order"
        android:contentDescription="@string/storeOrderImgDescription" />

    <ListView
        android:id="@+id/listView_basket"
        android:layout_width="271dp"
        android:layout_height="184dp"
        android:layout_marginStart="70dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_in_donut_view" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_basket_subtotal"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="70dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/listView_basket">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/basket_subtotal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AFBABC"
            android:editable="false"
            android:hint="@string/sub_total"
            android:textColorHint="#37474F"
            tools:ignore="Deprecated"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_sales_tax"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_basket_subtotal">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/sales_tax"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AFBABC"
            android:editable="false"
            android:hint="@string/sales_tax"
            android:textColorHint="#37474F"
            tools:ignore="Deprecated" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayout_total"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayout_sales_tax">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/totals"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#AFBABC"
            android:editable="false"
            android:hint="@string/total"
            android:textColorHint="#37474F"
            tools:ignore="Deprecated"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/place_your_order"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"
        android:layout_marginBottom="15dp"
        android:onClick="placeOrderBtn"
        android:text="@string/place_your_order"
        android:textAllCaps="true"
        android:textSize="24sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>