<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/relative_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView_donut"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="92dp"
        android:layout_marginEnd="56dp"
        android:layout_marginBottom="34dp"
        app:layout_constraintBottom_toTopOf="@+id/imageView_coffee"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/donuts"
        android:contentDescription="@string/donutImgDescription" />

    <ImageView
        android:id="@+id/imageView_coffee"
        android:layout_width="300dp"
        android:layout_height="200dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="34dp"
        android:layout_marginEnd="56dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_donut"
        app:srcCompat="@drawable/coffee"
        android:contentDescription="@string/coffeeImgDescription" />

    <ImageView
        android:id="@+id/imageView_basket"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginStart="55dp"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="92dp"
        android:layout_marginBottom="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/imageView_store_order"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_coffee"
        app:srcCompat="@drawable/your_order"
        android:contentDescription="@string/basketImgDescription" />

    <ImageView
        android:id="@+id/imageView_store_order"
        android:layout_width="100dp"
        android:layout_height="90dp"
        android:layout_centerInParent="true"
        android:layout_marginTop="48dp"
        android:layout_marginEnd="64dp"
        android:layout_marginBottom="67dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/imageView_coffee"
        app:srcCompat="@drawable/store_order"
        android:contentDescription="@string/storeOrderImgDescription" />
</androidx.constraintlayout.widget.ConstraintLayout>